<resources>
    <string name="app_name">Duerme Bebé</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Abrir Navigation Drawer</string>
    <string name="navigation_drawer_close">Cerrar Navigation Drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_prueba">prueba</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="favoritos">Favoritos</string>
    <string name="extras">Extras</string>
    <string name="compartir">Compartir</string>
    <string name="ajustes">Ajustes</string>
    <string name="logout">Cerrar Sesión</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="createaccout">Crear cuenta</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Crear Cuenta</string>
    <string name="recoverypass">Olvidé mi contraseña!</string>
    <string name="resetpassbody">Escribe tu dirección de correo en el siguiente campo de texto y luego presione \"Resetear Contraseña\"</string>
    <string name="CONSTANTEMAILEXISTS">The email address is already in use by another account.</string>
    <string name="account_alredy_exists">Ya existe una cuenta con ese correo, Recupérala!!</string>
    <string name="wrong_data_string">Revisa los datos ingresados</string>
    <string name="wrong_internet_conection">Revisa tu conexión a internet.</string>
    <string name="sorry_problems">Ups! Estamos experimentando algunos problemas, inténtalo más tarde</string>
    <string name="verify_identity">Revisa tu correo para verificar tu identidad</string>
    <string name="favTitle">Favoritos</string>
    <string name="hi">Hola</string>
    <string name="startTitle">Duerme bebé - Inicio</string>
    <string name="start">inicio</string>
    <string name="list_empty">Lista vacía</string>
    <string name="shuffle_starts">Modo aleatorio iniciado</string>
    <string name="coming_soon">Próximamente</string>
    <string name="press_again_2_exit">Presione otra vez para salir</string>
    <string name="download_best_app">Descarga la mejor aplicación para dormir a tu bebé:</string>
    <string name="share_with">Compartir con</string>
    <string name="no_artist_data">Aún sin datos</string>
    <string name="profileTitle">Perfil</string>
    <string name="username2">Nombre de Usuario:</string>
    <string name="email">Correo Electrónico:</string>
    <string name="notprofilepic">Aún no tienes foto de Perfil</string>
    <string name="sounds">sonidos</string>
    <string name="confirmEmail">Debes confirmar tu email</string>
    <string name="welcome">Bienvenid@!!</string>
    <string name="hello">Hola</string>
    <string name="connectionFailed">Revisa tu conexión, se registran problemas técnicos</string>
    <string name="wrongUsernameOrPassword">Usuario o Contraseña incorrectos</string>
    <string name="createAccount">Crear Cuenta</string>
    <string name="favAdded">Favorito agregado</string>
    <string name="favDeleted">Favorito eliminado</string>
    <string name="requiredData">Dato requerido</string>
    <string name="wrongMail">Correo erróneo</string>
    <string name="tooShort">La contraseña debe ser mayor a seis caracteres</string>
    <string name="differentPasswords">Tus contraseñas no coinciden</string>
    <string name="reviewThat">Revisa estos datos</string>
    <string name="User">Usuario</string>
    <string name="userNotExistsError">There is no user record corresponding to this identifier</string>
    <string name="userNotExists">El usuario no existe</string>
    <string name="putEmailHere">Coloca tu correo electrónico aquí</string>
    <string name="reviewEmailAccount">Revisa tu correo electrónico para recuperar tu cuenta</string>
    <string name="wrongEmail">Dirección de correo errónea</string>
    <string name="emailNotExists">Ups! Probablemente cu cuenta no existe</string>
    <string name="recoverPassTitle">Recuperar contraseña</string>
    <string name="loadingElements">Cargando elementos</string>
    <string name="appStoreUrl">https://play.google.com/store/apps/details?id=com.pmcoder.duermebeb</string>
</resources>
